add aitaobao on toppage

--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -45,8 +45,8 @@
             {{ render(controller('JiliApiBundle:Top:callboard' ) ) }}
             <div class="pageNumber"><a class="prevBtn curPt"></a><span></span><a class="nextBtn curPt"></a></div>
         </div>
-        <div class="topTaobao mt10">
-            <a data-type="3" data-tmpl="265x240" data-tmplid="182" data-rd="2" data-style="2" data-border="1" href="#"></a>
+        <div class="topiTaobao mt10">
+            <a href="http://ai.taobao.com/?pid=mm_49376465_4372428_25658343" target="_blank"><img src="/images1408/aitaobaoBN.jpg" width="270" height="250" /></a>
         </div>
         <div class="mt10" style="background: none; padding-left: 0; padding-bottom: 0;">
         	<!-- 首页 右侧一 标签云（改） -->
