alimama js 修改 #504

--- a/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
@@ -35,7 +35,9 @@
      </div><!-- eof shop-info -->
      <div class="l834Taobao">
      	<a data-type="3" data-tmpl="800x90" data-tmplid="195" data-rd="2" data-style="2" data-border="0" href="#"></a>
-     </div><!-- taobao -->
+     </div>
+     {% include "JiliFrontendBundle::alimama.html.twig" with { pid:"mm_49376465_4372428_25660341" } %}
+     <!-- taobao -->
       {% if commission_list %}
       <div class="shopRecommend rebateDetail">
       	<h3>返利详情</h3>
