--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -48,6 +48,7 @@
         <div class="topiTaobao mt10">
             <a href="http://ai.taobao.com/?pid=mm_49376465_4372428_25658343" target="_blank"><img src="/images1408/aitaobaoBN.jpg" width="270" height="250" /></a>
         </div>
+	{% include "JiliFrontendBundle::alimama.html.twig" with { pid:"mm_49376465_4372428_25660341" } %}
         <div class="mt10" style="background: none; padding-left: 0; padding-bottom: 0;">
         	<!-- 首页 右侧一 标签云（改） -->
         	{% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1650575" } %}
