--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
@@ -28,6 +28,7 @@
     <div class="l834Taobao">
         <a data-type="3" data-tmpl="800x90" data-tmplid="195" data-rd="2" data-style="2" data-border="0" href="#"></a>
     </div>
+    {% include "JiliFrontendBundle::alimama.html.twig" with { pid:"mm_49376465_4372428_25660341" } %}
 </div>
 <!-- eof main-->
 
