--- a/src/Jili/FrontendBundle/Resources/views/Taobao/shop.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/shop.html.twig
@@ -3,7 +3,7 @@
     <dd>
         <ul>
             {% for item in shops %}
-            <li class="listGroup">{{item.content}}</li>
+            <li class="listGroup">{{item.content|raw}}</li>
             {% endfor %}
         </ul>
     </dd>
