说明文字修改 #504

--- a/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
@@ -15,7 +15,7 @@
     <div class="taobaoWrap">
         <div class="itemL">
             <div class="taobaoNotice">
-                <em></em>注意：凡通过积粒网登录此页面购物的会员，当月即有机会参与抽奖，最高抽奖金额为5000积分，该页面使用抽奖原则代替返利原则。
+                <em></em>凡通过积粒网登录此页面购物的会员，当月即有机会参与抽奖，最高抽奖金额为5000积分，该页面使用抽奖原则代替返利原则。
            </div>
             <div class="taobaoSearch"> {{ render(controller('JiliFrontendBundle:Taobao:searchBox' ) ) }} </div>
             <div id="tabs"> 
