--- a/web/css/taobao.css
+++ b/web/css/taobao.css
@@ -12,9 +12,9 @@ a{ text-decoration:none;}
 .itemL .ltab li.ui-tabs-active{ background:#ff4526; border-radius:3px;}
 .itemL .ltab li a{ color:#333; padding: 0px 12px;}
 .itemL .ltab li.ui-tabs-active a{ color:#fff;}
-.itemL .tablist{ float: left; display: none; margin-bottom: 200px; background-color: #fff;}
+.itemL .tablist{ float: left; display: none; background-color: #fff;}
 .itemL .block{ display: block;}
-.itemL .tablist ul li{ margin-bottom: -1px; width: 730px; background: #fff; padding: 5px 0 0 5px;}
+.itemL .tablist .cell{ margin-bottom: -1px; width: 730px; height: 220px; background: #fff; padding: 5px 0 0 5px;}
 .itemR{ width:248px; float:right;}
 .itemR .discover .pt{ background:url(../images/taobao/lovedx.jpg) no-repeat 0 4px; padding-left: 20px;}
 .itemR .discover dt{ font-family:Microsoft Yahei,SimHei,Tahoma; font-size: 16px; margin-bottom:10px; color:#333;}
