--- a/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block javascript %}
-<script src="{{ asset('js/jquery.infinitescroll.js')}}" type="text/javascript"></script>
+<!--<script src="{{ asset('js/jquery.infinitescroll.js')}}" type="text/javascript"></script>-->
 <script src="{{ asset('bundles/jilifrontend/js/taobao.js') }}" language="javascript"></script>
 {% endblock %}
  
