--- a/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
@@ -19,7 +19,7 @@
            </div>
             <div class="taobaoSearch"> {{ render(controller('JiliFrontendBundle:Taobao:searchBox' ) ) }} </div>
             <div id="tabs"> 
-                <ul class="ltab">
+                <ul class="ltab clearfix">
                     {% for item in categorys %}
                     <li id="{{item.id}}"><a href="javascript:void(0);">{{item.categoryName}}</a></li>
                     {% endfor %}
