--- a/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
@@ -44,6 +44,7 @@
                                 <li><span class="submitBtn" id='info'>完善资料</span><a id="reg" class="submitBtn corGlobBlue font14 textUL">下次再说>></a></li>
                         </ul>
                                 {{ form_rest(form) }}
+                              <button style="display:none">register</button> 
                         </form>
                         {# else bind jili id#}
                         <span class="Jl fontYH">已有积粒网账号</span>
@@ -64,6 +65,7 @@
                                 <br />
                                 <li><span id='bind' class="submitBtn">立即绑定</span><a class="corGlobBlue" href="#">忘记密码</a></li>
                         </ul>
+                              <button style="display:none">binding</button> 
                         </form>
                         {#endif#}
                     </div>
