--- a/web/css1408/jl.ui.home.css
+++ b/web/css1408/jl.ui.home.css
@@ -322,14 +322,12 @@ div.loginArea{
 	text-align:center;
 }
 .loginArea .logIcon{
-	width:22px; 
-	height:22px;
-	background:url(../images1408/icons.png) no-repeat 0 -289px;
+	width:15px; 
+	height:16px;
+	background:url(../images1408/icons.png) no-repeat 0 -311px;
 	display: inline-block;
-	vertical-align: -5px;
-}
-.loginArea .logIcon:hover{
-	background:url(../images1408/icons.png) no-repeat 0 -312px;
+	vertical-align: -3px;
+	*+vertical-align: -2px;
 }
 a.register{
 	width: 240px;
