--- a/src/Jili/ApiBundle/Resources/views/Wenwen/bind.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Wenwen/bind.html.twig
@@ -13,7 +13,7 @@
 <script type="text/javascript">
 function load(){
     {% if bind_status is defined and bind_status == 1 %}
-    window.location.href = {{connect_url}};
+    window.location.href = "{{connect_url}}";
     {% endif %}
 }
 </script>
