update code and test

--- a/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
@@ -32,15 +32,15 @@
                                     <input type="hidden" name="sex" value="{{ sex }}"/>
                                 </li>
                                 <li>您是首次来到积粒网，为保障您的账号安全，请设置QQ邮箱并且输入一个积粒网用的密码。</li>
-                                <li><label for="qqEmail">邮箱地址：</label>{{ form_widget(form.email_id, { 'attr': {'class': 'qqEmail'} }) }}@qq.com
+                                <li><label for="qqEmail">邮箱地址：</label>{{ form_widget(form.email_id, { 'attr': {'class': 'qqEmail'} }) }}@qq.com</li>
+                                <li><label for="setPwd">设置密码：</label><input name="pwd" type="password" value=""/></li>
+                                <li>
                                     <strong class="errorMsg" id="regist_emailError">
-                                        {{ form_errors(form.email_id) }}
                                         {% if regcode is  defined %}
                                             {{ regcode }}
                                         {% endif %}
-                                    </strong></li>
-                                <li><label for="setPwd">设置密码：</label><input name="pwd" type="password" value=""/></li>
-                                <br />
+                                    </strong>
+                                </li>
                                 <li><span class="submitBtn" id='reg' >立即注册</span></li>
                             </ul>
                             {{ form_rest(form) }}
