--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/julyActivity.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/julyActivity.html.twig
@@ -125,5 +125,9 @@
   ga('send', 'pageview');
 
 </script>
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F04d95f521964697c43be27080e7fcaa1' type='text/javascript'%3E%3C/script%3E"));
+</script>
 </body>
 </html>
