--- a/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
@@ -7,6 +7,7 @@
 
 {% block javascript %}
 <script src="{{ asset('js/jquery.infinitescroll.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js1408/jl.ui.treasure.js')}}" type="text/javascript"></script>
 <script src="{{ asset('bundles/jilifrontend/js/taobao.js') }}" language="javascript"></script>
 {% endblock %}
  
@@ -24,9 +25,13 @@
                     <li id="{{item.id}}"><a href="javascript:void(0);">{{item.categoryName}}</a></li>
                     {% endfor %}
                 </ul>
-                <div class="taobaoCon"></div>
+                <div class="taobaoCon">
+                	<div class="taoMainCon"></div>
+                </div>
                 <div style="display:none" id="loading_bar">
-                {{ asset('images/taobao/progressBar.gif')}}
+                	<img class="loading" src="{{ asset('images/taobao/progressBar.gif')}}" alt="加载中"/>
+                    <img class="closeGif" src="{{ asset('images/taobao/baoxiang.gif')}}" alt="未打开宝箱动画"/>
+                    <img class="openGif" src="{{ asset('images/taobao/baoxiang1.gif')}}" alt="宝箱打开动画"/>
                 </div>
             </div>
         </div>
