--- a/web/css/taobao.css
+++ b/web/css/taobao.css
@@ -14,7 +14,7 @@ a{ text-decoration:none;}
 .itemL .ltab li.ui-tabs-active a{ color:#fff;}
 .itemL .tablist{ display: none; background-color: #fff;}
 .itemL .block{ display: block;}
-.itemL .tablist .cell{ margin-bottom: -1px; width: 730px; height: 220px; background: #fff; padding: 5px 0 0 5px;}
+.itemL .tablist .cell{ margin-bottom: -1px; width: 730px; height: 220px; background: #fff;}
 .itemR{ width:248px; float:right;}
 .itemR .discover .pt{ background:url(../images/taobao/lovedx.jpg) no-repeat 0 4px; padding-left: 20px;}
 .itemR .discover dt{ font-family:Microsoft Yahei,SimHei,Tahoma; font-size: 16px; margin-bottom:10px; color:#333;}
@@ -29,10 +29,10 @@ a{ text-decoration:none;}
 .itemR .rMall .discover .listGroup .name{ color:#999; font-size:12px; vertical-align: -10px;}
 #infscr-loading{ text-align: center;}
 /*2014-11-19, by wlt*/
-.taobaoCon{ position: relative; z-index: 1;}
+.taobaoCon{ position: relative; z-index: 1; background-color: #fff; padding-top: 5px; padding-left: 5px;}
 .treasure{ position: absolute; z-index: 1000; background: transparent; cursor: pointer; opacity: 0; filter: alpha(opacity=0);}
-.mask{ position: fixed; left: 0; top: 0; width: 1%; height: 0; z-index: 9000; opacity: .6; filter: alpha(opacity=60); background-color: #000;}
-.winLayer{ position: fixed; left: 50%; margin-left: -506px; top: 0px; background: url(../images/taobao/bg.png) no-repeat; width: 0; height: 0; z-index: 9099;}
+.mask{ position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: 9000; opacity: .6; filter: alpha(opacity=60); background-color: #000;}
+.winLayer{ position: fixed; left: 50%; margin-left: -506px; top: 0px; background: url(../images/taobao/bg.png) no-repeat; width: 1013px; height: 646px; z-index: 9099;}
 .winLayer .winCon{ position: relative; left: 50%; margin-left: -201px; top: 330px; width: 402px; height: 203px; z-index: 9998;}
 .winLayer .winCon .winResult{ position: absolute; top: 100px; left: 65px; z-index: 9999; font-size: 18px; font-weight: bold; color: #ac1b00; font-family: Microsoft Yahei,SimHei,Tahoma; background: url(../images/taobao/point.png) no-repeat 0 0; padding-left: 60px; line-height: 45px;}
 .winLayer .winCon .winResult strong{ color: #ff1e00;}
