#524 宝箱首页广告

--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -64,7 +64,28 @@
       </div>
     </div>
 </div>
-
+<div class="bxAdWrapper">
+    <div class="bxAd">
+        <div class="bxAdBg"></div>
+        <div class="sunRun"></div>
+        <span class="sample"></span>
+        <span class="close"></span>
+        <a href="/taobao/index" class="goBtn"></a>
+        <div class="rewardRules clearfix">
+            <p>在淘宝页面找到宝箱，每天就有机会赚米粒</p>
+            <ul class="clearfix">
+                <li>一等奖：500米粒</li>
+                <li>四等奖：20米粒</li>
+                <li>二等奖：100米粒</li>
+                <li>五等奖：5米粒</li>
+                <li>三等奖：50米粒</li>
+                <li>六等奖：2米粒</li>
+                <li>参与奖：1米粒</li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="adMask"></div>
 {% endblock %}
 
 {% block body_bottom %}
