--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -685,7 +685,7 @@
             </TR>
             <TR height=20>
                 <TD align=middle width=30><IMG height=9 src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
-                <TD><A class=menuChild href="{{ path('#') }}" target=main>每次宝箱数</A></TD>
+                <TD><A class=menuChild href="{{ path('jili_backend_gameseeker_managechest') }}" target=main>每次宝箱数</A></TD>
             </TR> 
             <TR height=4>
                 <TD colSpan=2></TD>
