--- a/src/Jili/BackendBundle/Resources/views/GameSeeker/PointsStrategy/build.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/GameSeeker/PointsStrategy/build.html.twig
@@ -3,7 +3,15 @@
 {% block title %}创建积分策略{% endblock %}
 
 {% block body %}
+
 <h1>创建积分策略</h1>
+
+{% for flashMessage in app.session.flashbag.get('error') %}
+    <div class="flash-error">
+        {{ flashMessage }}
+    </div>
+{% endfor %}
+
 <form action="{{ path('jili_backend_gameseeker_buildpointstrategy') }}" method="POST">
 {{ form_widget(form) }}
 <input type="submit" value="Create" class="btn btn-default pull-right" />
