#524 宝箱广告效果修改

--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -68,9 +68,9 @@
     <div class="bxAd">
         <div class="bxAdBg"></div>
         <div class="sunRun"></div>
-        <span class="sample"></span>
+        <a href="taobao/index" class="sample"></a>
         <span class="close"></span>
-        <a href="/taobao/index" class="goBtn"></a>
+        <a href="taobao/index" class="goBtn"></a>
         <div class="rewardRules clearfix">
             <p>在淘宝页面找到宝箱，每天就有机会赚米粒</p>
             <ul class="clearfix">
