--- a/src/Jili/BackendBundle/Resources/views/GameSeeker/PointsStrategy/operate_success.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/GameSeeker/PointsStrategy/operate_success.html.twig
@@ -6,4 +6,7 @@
         {{ flashMessage }}
     </div>
 {% endfor %}
+
+{% include("JiliBackendBundle:GameSeeker/PointsStrategy:menu.html.twig") %}
+
 {% endblock %}
