--- a/src/Jili/BackendBundle/Resources/views/GameSeeker/PointsStrategy/build.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/GameSeeker/PointsStrategy/build.html.twig
@@ -11,9 +11,19 @@
         {{ flashMessage }}
     </div>
 {% endfor %}
+<div>
+<p>格式要求:</p>
+<pre>
+分发频率1:分值1
+分发频率2:分值2
+...
+</pre>
+</div>
 
 <form action="{{ path('jili_backend_gameseeker_buildpointstrategy') }}" method="POST">
-{{ form_widget(form) }}
+{{ form_label(form.rules, '规则列表' ) }}
+{{ form_widget(form.rules) }}
+{{ form_rest(form) }}
 <input type="submit" value="Create" class="btn btn-default pull-right" />
 </form>
 {% endblock %}
