--- a/src/Jili/BackendBundle/Resources/views/GameSeeker/PointsStrategy/publish.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/GameSeeker/PointsStrategy/publish.html.twig
@@ -2,19 +2,12 @@
 
 {% block title %}发布积分方案{% endblock %}
 
-
 {% block body %}
 
-{% for flashMessage in app.session.flashbag.get('notice') %}
-    <div class="flash-notice">
-        {{ flashMessage }}
-    </div>
-{% endfor %}
-
-{% for flashMessage in app.session.flashbag.get('error') %}
-    <div class="flash-notice">
-        {{ flashMessage }}
-    </div>
+{% for  type,messages in app.session.flashBag.all %}
+    {% for message in messages %}
+        <div class="flash-{{ type }}">{{ message }}</div>
+    {% endfor  %}
 {% endfor %}
 
     <table class="records_list">
