--- a/src/Jili/ApiBundle/Resources/views/Admin/exchangeFromWenWenCsv.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/exchangeFromWenWenCsv.html.twig
@@ -1,5 +1,5 @@
-exchange_id,91jili_email,payment_amount,payment_point,status,reason,create_time
+exchange_id,91jili_cross_id,payment_amount,payment_point,status,reason,create_time,91jili_email
 {% if exchange %}
-{% for item in exchange %}{{ item.wenwenExchangeId }},{{ item.email }},{{ item.paymentPoint/100 }},{{ item.paymentPoint }},{% if item.status == 1 %}ok{% else %}ng{% endif %},{{ item.reason }},{{ item.createTime.date | date('Y-m-d') }}
+{% for item in exchange %}{{ item.wenwenExchangeId }},{{ item.userWenwenCrossId }},{{ item.paymentPoint/100 }},{{ item.paymentPoint }},{% if item.status == 1 %}ok{% else %}ng{% endif %},{{ item.reason }},{{ item.createTime.date | date('Y-m-d') }},{{ item.email }}
 {% endfor %}
 {% endif %}
