--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -92,16 +92,31 @@ $(document).ready(function(){
     {% endif %}  
     </div>
 {% if app.request.attributes.get('_route') == '_homepage' %}
-    <!--<div class="indexTopbannerWrap">
-    	<div id="banner" class="indexTopbanner" style="display:none;">
-            <a href="{{ path('_monthActivity_october') }}"><img src="{{ asset('images1408/sepUnFoldBanner.jpg') }}" width="1000" height="300" /></a>
+    <div class="indexTopbannerWrap">
+    	<!--<div id="banner" class="indexTopbanner" style="display:none;">
+            <a href="{{ path('_monthActivity_october') }}"><img src="{{ asset('images1408/baoXiangBanner.jpg') }}" width="1000" height="300" /></a>
             <span class="indexTopbannerFold">展开<s></s></span>
-        </div>
+        </div>-->
         <div id="top" class="indexTopbanner">
-            <a href="{{ path('_monthActivity_october') }}"><img src="{{ asset('images1408/octFoldBanner.jpg') }}" width="1000" height="60" /></a>
-            <span class="indexTopbannerFold">展开<s></s></span>
+            <a href="{{ path('jili_frontend_taobao_index') }}" class="allPointer"></a>
+            <div class="rule">
+            <div class="ruleCon">
+                <a href="{{ path('jili_frontend_taobao_index') }}" class="rulePic"></a>
+                <div class="ruleDetail">
+                    <p>在<a href="{{ path('jili_frontend_taobao_index') }}" class="textLink">淘宝页面</a>找到宝箱，每天就有机会赢米粒</p>
+                    <ul class="clearfix">
+                        <li>一等奖：8888米粒</li>
+                        <li>四等奖：8米粒</li>
+                        <li>二等奖：888米粒</li>
+                        <li>阳光奖：1米粒</li>
+                        <li>三等奖：88米粒</li>
+                    </ul>
+                    <p class="tips">流程：</p>
+                </div>
+            </div>
+            </div>
         </div>
-    </div>-->
+    </div>
 {% else %}
 {% endif %}
     <div class="headerConWrapper">
