--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -72,8 +72,8 @@
         <div class="bxAdBg"></div>
         <div class="sunRun"></div>
         <span class="close"></span>
-        <a href="taobao/index" class="sample"></a>
-        <a href="taobao/index" class="goBtn"></a>
+        <a href="{{ path('jili_frontend_taobao_index') }}" class="sample"></a>
+        <a href="{{ path('jili_frontend_taobao_index') }}" class="goBtn"></a>
         <div class="rewardRules clearfix">
             <p>在淘宝页面找到宝箱，每天就有机会赚米粒</p>
             <ul class="clearfix">
