#524 宝箱新手上路

--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -100,6 +100,7 @@ $(document).ready(function(){
         <div id="top" class="indexTopbanner">
             <a href="{{ path('jili_frontend_taobao_index') }}" class="allPointer"></a>
             <div class="rule">
+            <a href="{{ path('jili_frontend_taobao_index') }}" class="ruleLink"></a>
             <div class="ruleCon">
                 <a href="{{ path('jili_frontend_taobao_index') }}" class="rulePic"></a>
                 <div class="ruleDetail">
@@ -111,7 +112,6 @@ $(document).ready(function(){
                         <li>阳光奖：1米粒</li>
                         <li>三等奖：88米粒</li>
                     </ul>
-                    <p class="tips">流程：</p>
                 </div>
             </div>
             </div>
