--- a/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block javascript %}
+<script src="{{ asset('js1408/jquery.cookie.js') }}" type="application/javascript"></script>
 <script src="{{ asset('js/jquery.infinitescroll.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js1408/jl.ui.treasure.js')}}" type="text/javascript"></script>
 <script src="{{ asset('bundles/jilifrontend/js/taobao.js') }}" language="javascript"></script>
@@ -40,7 +41,17 @@
             <div class="rMall"> {{ render(controller('JiliFrontendBundle:Taobao:shop' ) ) }} </div>
         </div>
     </div>
-    
+    <div class="taoNewGuide"><div class="guideGif"></div><span class="guideClose"></span><span class="iKnow"></span></div>
+    <div class="taoNewGuideMask"></div>
+    <script>
+		(function($){
+			if(!$.cookie("fistShowFlag")){
+				$('.taoNewGuide').show();
+				$('.taoNewGuideMask').show();
+			}
+			$.cookie("fistShowFlag", true,{expires:100});
+		})(jQuery);
+	</script>
 {% include "JiliFrontendBundle::alimama.html.twig" with { pid:"mm_49376465_4372428_26502700" } %}
 
 </div>
