--- a/web/css1408/jl.ui.common.css
+++ b/web/css1408/jl.ui.common.css
@@ -331,7 +331,14 @@ a.tencent{
 	left: 50%;
 	margin-left: -500px;
 }
-.ruleCon{ position: relative; z-index: 1; float: right; height: 45px;}
+.ruleLink{width: 1000px;
+	position: absolute;
+	z-index: 1998;
+	top: 0;
+	left: 50%;
+	height: 51px;
+	margin-left: -500px;}
+.ruleCon{ position: relative; z-index:1998; float: right; height: 45px;}
 .indexTopbanner .rule a.rulePic{
 	width: 69px;
 	height: 45px;
@@ -347,6 +354,8 @@ a.tencent{
 	background-color: #fffae3; 
 	color: #333;
 	border-radius: 3px;
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+	padding: 12px 15px 18px;
 	display: none;	
 }
 .indexTopbanner .ruleDetail .textLink, .indexTopbanner .ruleDetail .tips{
