--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -106,11 +106,13 @@ $(document).ready(function(){
                 <div class="ruleDetail">
                     <p>在<a href="{{ path('jili_frontend_taobao_index') }}" class="textLink">淘宝页面</a>找到宝箱，每天就有机会赢米粒</p>
                     <ul class="clearfix">
-                        <li>一等奖：8888米粒</li>
-                        <li>四等奖：8米粒</li>
-                        <li>二等奖：888米粒</li>
-                        <li>阳光奖：1米粒</li>
-                        <li>三等奖：88米粒</li>
+                        <li>一等奖：888米粒</li>
+                        <li>四等奖：20米粒</li>
+                        <li>二等奖：100米粒</li>
+                        <li>五等奖：5米粒</li>
+                        <li>三等奖：50米粒</li>
+                        <li>六等奖：2米粒</li>
+                        <li>参与奖：1米粒</li>
                     </ul>
                 </div>
             </div>
